# langchain

./: .gitignore  Chinook.db  Chinook_Postgres.sql  advance_agent_test.py  agent_test.py  config.json  foundation_agent_test.py  insert_sql_to_db.py  main.py  pyproject.toml  rag_test.py  requirements.txt  sql_agent_test.py  sql_test.py  sql_to_vector_db.py  sql_to_vector_db_with_langgraph.py  sql_tool.py  state_with_react_agnet.py
agent_framework/core/: model.py
agent_framework/core/agent/: connect_pg.py  extract_table_summary.py  pandas_agent.py  pg_agent.py  pg_to_qdrant_agent.py  qdrant_agent.py  sql_agent.py  sql_agents.py  supervisor_agent.py
agent_framework/core/base_models/: pg_base_models.py
agent_framework/core/nodes/: pg_nodes.py  pg_to_qdrant_nodes.py  (+2 more)
agent_tutorial/: add_multiply_agents.py  hierarchical_agent_team.py  multi_agent.py  multi_agent_example.py  online_plot_agent.py  pandas_agent.py  plan_and_execute_agent.py  python_plot_agent.py  quick_start.py  reasoning_without_observation_agent.py  sql_agent.py  supervisor_agents.py  tree_of_thoughts.py
agent_tutorial/iris/: iris.data
conceptual_guide/: chat_models.py
conveptual_guide/: chat_model_with_tools.py  chat_models.py
dvdrental/: restore.sql
langgraph_tutorial/Fine-grained Control/: How_to_create_map-reduce_branches＿for _parallel＿execution.py
langgraph_tutorial/Graph API Basics/: How_to_create_a_sequence_of_steps.py  How_to_create_and_control_loops.py  How_to_create_branches_for_parallel_node_execution.py  How_to_update_graph_state_from_nodes.py
tools/: ollama_functions.py
(+16 files in other folders)
